Update margin for tweet-container and add a word-wrap to the tweet container to prevent text overflow

--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -1,5 +1,5 @@
 #tweet-container {
-  margin-top: 3em;
+  margin-top: 2em;
   /* border: 3px solid blue; */
 }
 
@@ -41,6 +41,7 @@ article > header {
 
 article > div p {
   margin: 0.3em 0.5em;
+  word-wrap: break-word;
 }
 
 footer {
